# music_disc_maker

./: .gitignore  LICENSE  README.md  pyproject.toml
music_disc_maker/: __init__.py  __main__.py  audio.py  classes.py  config.py  config_generator.py  defaults.py  generate_js.py  images.py  io_utils.py  loader.py  manifests.py  models.py  pack_builder.py  parser.py  validation.py
tests/: test_config_generator.py  test_loader.py  test_pack_builder.py  test_validation.py
